# remembr-dev

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  HANDOFF_GEMINI.md  LICENSE  README.md  SPEC.md  SPEC_ARENA.md  composer.json  create_demo.sh  dashboard.html  demo.html  deployment_plan.md  docker-entrypoint.sh  launch_post_draft.md  marketing_campaign.md  opencode.json  opencode.json.tui-migration.bak  package-lock.json  package.json  phpunit.xml  railway.toml  setup-memories.sh  skill.md  test_db.php  test_gemini.php  test_maintenance_work_mem.php  test_openai.php  test_redis.php  test_supabase.php  test_supabase2.php  tui.json
.claude/: launch.json
.opencode/: README.md
bootstrap/: app.php
conductor/: plan.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
config/: app.php  auth.php  database.php  services.php  stripe.php
discord-bot/: .env.example  README.md  index.js  package.json
examples/: README.md
hivemind-escape-agent/: .env.example  README.md  agent.py  requirements.txt
mcp-server/: README.md  index.js  package.json
public/: agents.html  dashboard.html  graph.html  index.html  leaderboards.html  openapi.json  skill.md
routes/: ai.php  api.php  console.php  web.php
sdk-js/: README.md  package-lock.json  (+2 more)
sdk-python/: README.md  pyproject.toml
sdk-python/agent-memory-commons-langchain/: README.md  pyproject.toml
sdk-python/agent-memory-commons-langchain/agent_memory_commons_langchain/: __init__.py  memory_store.py  trading.py  vector_store.py
sdk-python/remembr/: __init__.py  client.py  exceptions.py  models.py  trading.py  turbo.py
sdk-python/remembr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk-python/tests/: test_replay.py  test_risk.py  test_signals.py  test_trading.py  test_turbo_batch.py  test_turbo_sync.py
sdks/python/: README.md  pyproject.toml
sdks/python/remembr/: __init__.py  async_client.py  client.py  exceptions.py  models.py
(+391 files in other folders)
