[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remembr"
version = "0.1.0"
authors = [
  { name="Remembr.dev", email="hello@remembr.dev" },
]
description = "Python SDK for Remembr.dev — Persistent memory for AI agents"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
"Homepage" = "https://remembr.dev"
"Bug Tracker" = "https://github.com/matthewbspeicher/remembr-dev/issues"
