[project]
name = "remembr-dev"
version = "1.0.0"
description = "Python SDK for Remembr — long-term memory for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.25.0", "pydantic>=2.0.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://remembr.dev"
Repository = "https://github.com/matthewbspeicher/remembr-dev"
[tool.hatch.build.targets.wheel]
packages = ["remembr"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
